fix table of contents border not adapting to dark mode

--- a/src/components/table-of-contents/table-of-contents.module.scss
+++ b/src/components/table-of-contents/table-of-contents.module.scss
@@ -11,7 +11,7 @@
 	padding: 6px 0;
 	margin-right: 3px;
 
-	border-left: 3px solid rgba(0, 0, 0, 0.2);
+	border-left: 3px solid var(--minImpactBlack);
 }
 
 .tocLi a {
